Fixed bug where user's avatar was clipped improperly

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -167,6 +167,10 @@ h3 {
   overflow: visible;
 }
 
+.is-overflow-hidden {
+  overflow: hidden;
+}
+
 .card {
   border-radius: 0.5rem;
   box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11), 0 5px 15px 0 rgba(0, 0, 0, 0.08);
